dataset1235/2025-2/1379599236/users/463152573/executions/2110095464_795845062.log
== SUBMISSION (2025-08-25 19:14:21)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = (5*ML + 6*MT + 9*MP)/20
print(round(NF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:19:55)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = 0.25 *ML + 0.3*MT 0.45*MP
print(round(NF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-25 19:04:22)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = (5*ML + 6*MT + 9*MP)/20
print(round(NF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.56
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:05:34)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = (5*ML + 6*MT + 9*MP)/20
print(round(NF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:20:20)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = 0.25 *ML + 0.3*MT + 0.45*MP
print(round(NF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.55
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:20:06)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = 0.25 *ML + 0.3*MT 0.45*MP
print((round(NF,2))
-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
-- ERROR:
File "XXXX", line 4
    NF = 0.25 *ML + 0.3*MT 0.45*MP
                           ^^^^
SyntaxError: invalid syntax
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:04:15)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = (5*ML + 6*MT + 9*MP)/20
print(round(NF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-25 19:04:40)
-- CODE: 
ML = float(input())
MT = float(input())
MP = float(input())
NF = (5*ML + 6*MT + 9*MP)/20
print(round(NF,2))
-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
4.8
3.2
7.6
---- correct output:
5.58
---- user output:
5.58
-- TEST CASE 2:
---- input:
7.5
5.3
8.6
---- correct output:
7.33
---- user output:
7.33
-- TEST CASE 3:
---- input:
4.9
3.21
9.1
---- correct output:
6.28
---- user output:
6.28
-- TEST CASE 4:
---- input:
8.5
6.3
5.1
---- correct output:
6.31
---- user output:
6.31
-- TEST CASE 5:
---- input:
8.8
9.2
7.6
---- correct output:
8.38
---- user output:
8.38
-- TEST CASE 6:
---- input:
8.5
4.9
8.8
---- correct output:
7.55
---- user output:
7.56
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
